--- a/src/language/login.json
+++ b/src/language/login.json
@@ -29,7 +29,7 @@
       "pt": "Cadastre-se aqui!"
     },
     "skipNow": {
-      "en": "Register Here!",
+      "en": "Skip for now",
       "es": "Omitir por ahora",
       "fr": "Passer pour le moment",
       "de": "Für jetzt überspringen",
