ajustes tipo tour

--- a/src/language/newSummary.json
+++ b/src/language/newSummary.json
@@ -74,12 +74,26 @@
           "de": "erwachsene",
           "pt": "adultos"
         },
+        "people": {
+          "en": "People",
+          "es": "Personas",
+          "fr": "Personnes",
+          "de": "Personen",
+          "pt": "Pessoas"
+        },
         "children": {
           "es": "Niños",
           "en": "children",
           "fr": "enfants",
           "de": "Kinder",
           "pt": "crianças"
+        },
+        "ageRange_2_12": {
+          "en": "Age: 2–12 years",
+          "es": "Edad: 2–12 años",
+          "fr": "Âge : 2 à 12 ans",
+          "de": "Alter: 2–12 Jahre",
+          "pt": "Idade: 2–12 anos"
         },
         "changeButton": {
           "es": "Cambiar",
